--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <ul class="team-menu-list">
                     <li class="team-menu-item">
                         <img class="team-image"
-                            srcset="./images/Mark-Guerrero-mob.jpg 1x, ./images/images/Mark-Guerrero-mob-2x.jpg 2x" 
+                            srcset="./images/Mark-Guerrero-mob.jpg 1x, ./images/Mark-Guerrero-mob-2x.jpg 2x" 
                             src="./images/Mark-Guerrero.jpg" 
                             alt="Product Designer" 
                             width="264" 
@@ -363,11 +363,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <picture>
-                                <source srcset="./images/portfolio/Banking-App-1x.jpg 1x, ./images/portfolio/Banking-App-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Banking-App-1x.jpg 1x, ./images/Banking-App-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/Banking-App-tab-1x.jpg 1x, ./images/portfolio/Banking-App-tab-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Banking-App-tab-1x.jpg 1x, ./images/Banking-App-tab-2x.jpg 2x"
                                     media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/Banking-App-mob.jpg 1x, ./images/portfolio/Banking-App-mob-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Banking-App-mob.jpg 1x, ./images/Banking-App-mob-2x.jpg 2x"
                                     media="(min-width: 320px)" />
                                 <img src="./images/Banking-App.jpg" 
                                     alt="Banking App" 
@@ -387,11 +387,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <picture>
-                                <source srcset="./images/portfolio/Cashless-Payment-1x.jpg 1x, ./images/portfolio/Cashless-Payment-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Cashless-Payment-1x.jpg 1x, ./images/Cashless-Payment-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/Cashless-Payment-tab-1x.jpg 1x, ./images/portfolio/Cashless-Payment-tab-2x.jpg 2x "
+                                <source srcset="./images/portfolio/Cashless-Payment-tab-1x.jpg 1x, ./images/Cashless-Payment-tab-2x.jpg 2x "
                                     media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/Cashless-Payment-mob.jpg 1x, ./images/portfolio/Cashless-Payment-mob-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Cashless-Payment-mob.jpg 1x, ./images/Cashless-Payment-mob-2x.jpg 2x"
                                     media="(min-width: 320px)" />
                                 <img src="./images/Cashless-Payment.jpg" 
                                     alt="Cashless Payment" 
@@ -411,11 +411,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <picture>
-                                <source srcset="./images/portfolio/Meditation-App-1x.jpg 1x, ./images/portfolio/Meditation-App-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Meditation-App-1x.jpg 1x, ./images/Meditation-App-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/Meditation-App-tab-1x.jpg 1x, ./images/portfolio/Meditation-App-tab-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Meditation-App-tab-1x.jpg 1x, ./images/Meditation-App-tab-2x.jpg 2x"
                                     media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/Meditation-App-mob-1x.jpg 1x, ./images/portfolio/Meditation-App-mob-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Meditation-App-mob-1x.jpg 1x, ./images/Meditation-App-mob-2x.jpg 2x"
                                     media="(min-width: 320px)" />
                                 <img src="./images/Meditation-App.jpg" 
                                     alt="Meditation App" 
@@ -435,11 +435,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <picture>
-                                <source srcset="./images/portfolio/Taxi-Service-1x.jpg 1x, ./images/portfolio/Taxi-Service-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Taxi-Service-1x.jpg 1x, ./images/Taxi-Service-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/Taxi-Service-tab-1x.jpg 1x, ./images/portfolio/Taxi-Service-tab-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Taxi-Service-tab-1x.jpg 1x, ./images/Taxi-Service-tab-2x.jpg 2x"
                                     media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/Taxi-Service-mob-1x.jpg 1x, ./images/portfolio/Taxi-Service-mob-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Taxi-Service-mob-1x.jpg 1x, ./images/Taxi-Service-mob-2x.jpg 2x"
                                     media="(min-width: 320px)" />
                                 <img src="./images/Taxi-Service.jpg" 
                                     alt="Taxi Service" 
@@ -460,13 +460,13 @@
                         <div class="portfolio-wrapper">
                             <picture>
                                 <source
-                                    srcset="./images/portfolio/Screen-Illustrations-1x.jpg 1x, ./images/portfolio/Screen-Illustrations-2x.jpg 2x"
+                                    srcset="./images/portfolio/Screen-Illustrations-1x.jpg 1x, ./images/Screen-Illustrations-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
                                 <source
-                                    srcset="./images/portfolio/Screen-Illustrations-tab-1x.jpg 1x, ./images/portfolio/Screen-Illustrations-tab-2x.jpg 2x"
+                                    srcset="./images/portfolio/Screen-Illustrations-tab-1x.jpg 1x, ./images/Screen-Illustrations-tab-2x.jpg 2x"
                                     media="(min-width: 768px)" />
                                 <source
-                                    srcset="./images/portfolio/Screen-Illustrations-mob-1x.jpg 1x,./images/portfolio/Screen-Illustrations-mob-2x.jpg 2x "
+                                    srcset="./images/portfolio/Screen-Illustrations-mob-1x.jpg 1x,./images/Screen-Illustrations-mob-2x.jpg 2x "
                                     media="(min-width: 320px)" />
                                 <img src="./images/Screen-Illustrations.jpg" 
                                     alt="Screen Illustrations" 
@@ -486,11 +486,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <picture>
-                                <source srcset="./images/portfolio/Online-Courses-1x.jpg 1x, ./images/portfolio/Online-Courses-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Online-Courses-1x.jpg 1x, ./images/Online-Courses-2x.jpg 2x"
                                     media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/Online-Courses-tab-1x.jpg 1x, ./images/portfolio/Online-Courses-tab-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Online-Courses-tab-1x.jpg 1x, ./images/Online-Courses-tab-2x.jpg 2x"
                                     media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/Online-Courses-mob-1x.jpg 1x, ./images/portfolio/Online-Courses-mob-2x.jpg 2x"
+                                <source srcset="./images/portfolio/Online-Courses-mob-1x.jpg 1x, ./images/Online-Courses-mob-2x.jpg 2x"
                                     media="(min-width: 320px)" />
                                 <img src="./images/Online-Courses.jpg" 
                                     alt="Online Courses" 
