--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         </section>
     </main>
         <footer class="footer">
-            <div class="container-footer">
+            <div class="container container-footer">
                 <div class="footer-container-logo">
                     <a id="footer-logo" class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
                     <p class="footer-text">
